--- a/prod.yml
+++ b/prod.yml
@@ -52,6 +52,6 @@
   - name: Run httpd container
     docker_container:
       name: custom_Appache 
-      image: mikedzn/epam
+      image: mikedzn/epam_dev:latest
       exposed_ports: "80"
       ports: "80:80"
