--- a/prod.yml
+++ b/prod.yml
@@ -74,16 +74,31 @@
       source: pull
       force_source: true
 
-  - name: Inspect a single image
-    docker_image_info:
-      name: mikedzn/epam_dev:latest 
-    register: image_pull  
+  - name: Inspect Docker image
+  docker_image:
+    name: mikedzn/epam_dev:latest
+  register: image_info
+
+- name: Check if source changed
+  set_fact:
+    source_changed: False
+  when: image_info.id != myimage_id
+
+- name: Update image id
+  set_fact:
+    myimage_id: "{{ image_info.id }}"
+  when: source_changed
+
+#  - name: Inspect a single image
+#    docker_image_info:
+#      name: mikedzn/epam_dev:latest 
+#    register: image_pull  
     # we compare the id of the image we already had with the id of the image we just pulled.
     # If they are different then image_pull.changed will be true
     ### changed_when: image_id.stdout != image_pull.images(Id)
-  - name: Print
-    debug:
-      msg: "{{ image_pull.images('Architecture') }}"
+#  - name: Print
+#    debug:
+#      msg: "{{ image_pull.images('Architecture') }}"
 
 
 #  - name: Build Docker Image
