--- a/prod.yml
+++ b/prod.yml
@@ -57,7 +57,7 @@
 #      ports: "80:80"
   - name: Get Existing Image ID
     command: 'docker images --format {% raw %}"{{.ID}}"{% endraw %} --no-trunc /mikedzn/epam_dev:latest'
-    register: image_id
+    register: myimage_id
     changed_when: image_id.rc != 0
 
 #  - name: pull docker image
