--- a/prod.yml
+++ b/prod.yml
@@ -1,5 +1,11 @@
 ---
 - name: Update Docker container
+  gather_facts: no
+  hosts: tag_Name_Production_Environment
+  become: yes
+  vars:
+    ansible_python_interpreter: /usr/bin/python3  
+    ansible_user: ubuntu
   hosts: localhost
   gather_facts: false
   tasks:
