--- a/update.yml
+++ b/update.yml
@@ -18,7 +18,7 @@
 
   - name: Stop and remove existing Docker Container
     docker_image:
-      name: mikedzn/epam_dev
+      name: mikedzn_website
       state: absent
 
   - name: Start a new container based on the latest image
